--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,409 @@
-.App {
-  text-align: center;
+:root {
+ --background: #faeee7;
+ --headline: #33272a;
+ --paragraph: #594a4e;
+ --button: #e30b5c;
+ --otherbutton: #001858;
+ --button-text: #33272a;
+ --stroke: #33272a;
+ --main: #fffffe;
+ --highlight: #ff8ba7;
+ --secondary: #ffc6c7;
+ --tertiary: #c3f0ca;
+
+ /*other vars */
+ --borderRadius: 0.25rem;
+ --letterSpacing: 1px;
+ --transition: 0.3s ease-in-out all;
+ --max-width: 1120px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+ box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;500;700&family=Open+Sans:wght@400;600;700&display=swap');
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+ margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+ background: var(--highlight);
+ font-family: 'Open Sans', sans-serif;
+ line-height: 1.75;
+ color: var(--paragraph);
+}
+
+p {
+ margin-bottom: 1rem;
+ max-width: 40em;
+ line-height: 1.75;
+ font-size: 1.5rem;
+ font-weight: 400;
+}
+
+h1 {
+ margin-top: 0;
+ font-size: 3.052rem;
+}
+
+h2 {
+ font-size: 2.441rem;
+}
+
+h3 {
+ color: #2e3c40;
+ font-size: 3.5em;
+ font-weight: 600;
+ line-height: 1.5;
+ padding-bottom: 0.5em;
+ margin: 0 0 0.142857143em;
+ transition: color 0.45s ease, border 0.45s ease;
+ text-align: center;
+}
+
+h4 {
+ font-size: 1.563rem;
+ text-align: center;
+}
+
+h5 {
+ font-size: 1.25rem;
+}
+
+a {
+ text-decoration: none;
+}
+ul {
+ list-style-type: none;
+ padding: 0;
+}
+
+img {
+ max-width: 100%;
+ display: block;
+ object-fit: cover;
+}
+
+.container {
+ display: grid;
+ grid-auto-columns: 1fr;
+ grid-template-areas:
+  'nav'
+  'hero'
+  'card1'
+  'card2'
+  'card3'
+  'more1'
+  'more2'
+  'footer';
+}
+
+nav {
+ grid-area: nav;
+ grid-column: 1/4;
+ grid-row: 1/2;
+}
+
+#hero {
+ grid-area: hero;
+ grid-column: 1/4;
+ grid-row: 2/3;
+ margin-bottom: 4rem;
+}
+
+#card1 {
+ grid-area: card1;
+ grid-column: 1/2;
+ grid-row: 3/4;
+ margin: 4rem 2;
+}
+
+#card2 {
+ grid-area: card2;
+ grid-column: 2/3;
+ grid-row: 3/4;
+ margin: 4rem 2;
+}
+#card3 {
+ grid-area: card3;
+ grid-column: 3/4;
+ grid-row: 3/4;
+ margin: 4rem 2;
+}
+
+#more1 {
+ grid-area: more1;
+ grid-column: 1/4;
+ grid-row: 4/5;
+ margin-top: 4rem;
+ background: var(--main);
+}
+
+#more2 {
+ grid-area: more2;
+ grid-column: 1/4;
+ grid-row: 5/6;
+}
+
+footer {
+ grid-area: footer;
+ grid-column: 1/4;
+ grid-row: 6/7;
+ margin: 2rem 0;
+}
+
+.hero {
+ height: 400px;
+ position: relative;
+ padding: 20px;
+ box-sizing: border-box;
+ display: flex;
+ align-items: flex-end;
+ text-decoration: none;
+ border: 4px solid #b0215e;
+ background-image: url('../src/assets/happy.jpeg');
+ background-size: cover;
+}
+
+.hero .inner {
+ height: 80%;
+ width: 30%;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ background: white;
+ box-sizing: border-box;
+ padding: 1.7rem;
+ margin-bottom: 2rem;
+ margin-left: 2rem;
+}
+
+.hero .title {
+ font-size: 24px;
+ color: black;
+ text-align: center;
+ font-weight: 700;
+ color: #181818;
+ text-shadow: 0px 2px 2px #a6f8d5;
+ position: relative;
+ margin: 0 0 20px 0;
+}
+.hero .subtitle {
+ color: #b0215e;
+ text-align: center;
+}
+
+.hero__img {
+ flex: 1;
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ margin-left: 2rem;
+}
+
+.hero__img img {
+ width: 60%;
+}
+span {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-weight: 600;
+ margin-top: 1.5rem;
+}
+.card {
+ display: flex;
+ flex-direction: column;
+ max-width: 20.75em;
+ overflow: hidden;
+ border-radius: 0.5em;
+ text-decoration: none;
+ background: white;
+ margin: 1em;
+ padding: 2.75em 2.5em;
+ box-shadow: 0 1.5em 2.5em -0.5em rgba(#000000, 0.1);
+ transition: transform 0.45s ease, background 0.45s ease;
+}
+
+.card h3 {
+ color: #2e3c40;
+ font-size: 2.5em;
+ font-weight: 600;
+ line-height: 1.5;
+ padding-bottom: 0.5em;
+ margin: 0 0 0.142857143em;
+ border-bottom: 2px solid var(--button);
+ transition: color 0.45s ease, border 0.45s ease;
+}
+
+.card h4 {
+ color: #627084;
+ text-transform: uppercase;
+ font-size: 1.125em;
+ font-weight: 600;
+ line-height: 1.5;
+ letter-spacing: 0.1em;
+ margin: 1.5 0 1.777777778em;
+ transition: color 0.45s ease;
+ text-align: center;
+}
+
+.card p {
+ opacity: 0;
+ color: #ffffff;
+ font-weight: 400;
+ line-height: 1.8;
+ margin: 0 0 1.25em;
+ transform: translateY(-1em);
+ transition: opacity 0.45s ease, transform 0.5s ease;
+ text-align: justify;
+ font-size: 1.25em;
+}
+
+.card .link-text {
+ display: block;
+ color: var(--button);
+ font-size: 1.125em;
+ font-weight: 600;
+ line-height: 1.2;
+ margin: auto 0 0;
+ transition: color 0.45s ease;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.card .link-text .icon {
+ margin-left: 0.5em;
+ transition: transform 0.6s ease;
+}
+
+.card:hover {
+ background: var(--button);
+ transform: scale(1.02);
+}
+.card:hover h3 {
+ color: #fff;
+ border-bottom-color: var(--button);
+}
+.card:hover h4 {
+ color: #fff;
+}
+.card:hover p {
+ opacity: 1;
+ transform: none;
+}
+.card:hover .link-text {
+ color: #fff;
+}
+.card:hover .link-text .icon {
+ animation: point 1.25s infinite alternate;
+}
+
+@keyframes point {
+ 0% {
+  transform: translateX(0);
+ }
+ 100% {
+  transform: translateX(0.125em);
+ }
+}
+
+.more-reversed :first-child {
+ order: 2;
+}
+.background {
+ background: var(--highlight);
+ margin: 2rem;
+ width: 100%;
+}
+
+.more {
+ display: flex;
+ flex-direction: column;
+ margin-bottom: 2rem;
+ padding: 3rem;
+ width: 100%;
+}
+
+.more-text {
+ max-width: 500px;
+ text-align: justify;
+ justify-self: center;
+ padding: 20px 0;
+ margin: 0 auto;
+ line-height: 1.7rem;
+}
+
+.footer {
+ margin-top: 3rem;
+ text-align: center;
+ font-size: 1rem;
+}
+
+@media (min-width: 768px) {
+ .container {
+  grid-template-columns: repeat(3 1fr);
+  grid-template-areas:
+   'nav'
+   'hero'
+   'card1 card2 card3'
+   'more1'
+   'more2'
+   'footer';
+ }
+
+ .hero {
+  height: 500px;
+ }
+ .inner {
+  width: 50%;
+  height: 100%;
+ }
+ .title {
+  font-size: 30px;
+ }
+
+ .more {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  margin-bottom: 2rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+ }
+ more-text {
+  display: flex;
+  justify-content: flex-start;
+  max-width: 500px;
+  text-align: center;
+  justify-self: center;
+  padding: 20px 0;
+  margin: 0 auto;
+  line-height: 1.7rem;
+ }
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (min-width: 1040px) {
+ .more {
+  margin-right: auto;
+  margin-left: auto;
+ }
 }
