--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,7 +3,6 @@
  display: flex;
  justify-content: space-between;
  align-items: center;
- background: var(--secondary);
 
  padding: 1rem 2rem;
 }
@@ -30,13 +29,14 @@
 .app__navbar-links li {
  margin: 0 1rem;
  cursor: pointer;
+ font-weight: bold;
 }
 
 .app__navbar-links li:hover {
  color: var(--button-text);
 }
 
-.app__navbar-login {
+.app__navbar-right {
  display: flex;
  justify-content: flex-end;
  align-items: center;
@@ -89,12 +89,14 @@
  cursor: pointer;
  display: inline-block;
  background: none;
- border: 1px #ff8ba7 solid;
- border-radius: 50px;
- padding: 7px 16px;
+ border: 1px var(--button) solid;
+ background: var(--button);
+ color: var(--main);
+ padding: 1rem;
  line-height: 1.2;
  text-align: center;
  text-decoration: none;
+ font-weight: bold;
 }
 
 .btn-dark-outline {
@@ -150,7 +152,7 @@
   padding: 1rem;
  }
 
- .app__navbar-login {
+ .app__navbar-right {
   display: none;
  }
 
