--- a/src/App.css
+++ b/src/App.css
@@ -131,20 +131,21 @@ nav {
  grid-area: card1;
  grid-column: 1/2;
  grid-row: 3/4;
- margin: 4rem 2;
+ margin: 4rem 2rem;
+ margin-left: 4rem;
 }
 
 #card2 {
  grid-area: card2;
  grid-column: 2/3;
  grid-row: 3/4;
- margin: 4rem 2;
+ margin: 4rem 2rem;
 }
 #card3 {
  grid-area: card3;
  grid-column: 3/4;
  grid-row: 3/4;
- margin: 4rem 2;
+ margin: 4rem 2rem;
 }
 
 #more1 {
