--- a/src/App.css
+++ b/src/App.css
@@ -64,11 +64,13 @@ h1 {
 
 h2 {
  font-size: 2.441rem;
+ text-transform: uppercase;
 }
 
 h3 {
+ text-transform: uppercase;
  color: var(--text);
- font-size: 3.5em;
+ font-size: 2.5em;
  font-weight: 600;
  line-height: 1.5;
  padding-bottom: 0.5em;
@@ -206,30 +208,21 @@ footer {
  position: relative;
  margin: 0 0 20px 0;
 }
-.hero .subtitle {
- color: #b0215e;
- text-align: center;
-}
 
-.hero__img {
- flex: 1;
- width: 100%;
- display: flex;
- justify-content: center;
- align-items: center;
- margin-left: 2rem;
-}
-
-.hero__img img {
- width: 60%;
-}
 span {
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 600;
- margin-top: 1.5rem;
+ color: var(--button);
+ margin-top: 2rem;
+ transition: all 300ms ease-in-out;
 }
+
+span:hover {
+ font-size: 1.5rem;
+}
+
 .card {
  display: flex;
  flex-direction: column;
@@ -245,10 +238,6 @@ span {
 }
 
 .card h3 {
- color: #2e3c40;
- font-size: 2.5em;
- font-weight: 600;
- line-height: 1.5;
  padding-bottom: 0.5em;
  margin: 0 0 0.142857143em;
  border-bottom: 2px solid var(--button);
@@ -256,15 +245,8 @@ span {
 }
 
 .card h4 {
- color: #627084;
- text-transform: uppercase;
- font-size: 1.125em;
- font-weight: 600;
- line-height: 1.5;
- letter-spacing: 0.1em;
  margin: 1.5 0 1.777777778em;
  transition: color 0.45s ease;
- text-align: center;
 }
 
 .card p {
@@ -279,31 +261,16 @@ span {
  font-size: 1.25em;
 }
 
-.card .link-text {
- display: block;
- color: var(--button);
- font-size: 1.125em;
- font-weight: 600;
- line-height: 1.2;
- margin: auto 0 0;
- transition: color 0.45s ease;
- display: flex;
- justify-content: center;
- align-items: center;
-}
-
-.card .link-text .icon {
- margin-left: 0.5em;
- transition: transform 0.6s ease;
-}
-
 .card:hover {
  background: var(--button);
  transform: scale(1.02);
 }
+.card:hover span {
+ color: #fff;
+}
 .card:hover h3 {
  color: #fff;
- border-bottom-color: var(--button);
+ border-bottom-color: var(--main);
 }
 .card:hover h4 {
  color: #fff;
@@ -312,11 +279,9 @@ span {
  opacity: 1;
  transform: none;
 }
-.card:hover .link-text {
- color: #fff;
-}
-.card:hover .link-text .icon {
- animation: point 1.25s infinite alternate;
+
+.card span:hover {
+ color: var(--main);
 }
 
 @keyframes point {
@@ -343,6 +308,19 @@ span {
  margin-bottom: 2rem;
  padding: 3rem;
  width: 100%;
+}
+
+.more__img {
+ flex: 1;
+ width: 100%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ margin-left: 2rem;
+}
+
+.more__img img {
+ width: 60%;
 }
 
 .more-text {
