--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,13 @@
 :root {
  --background: #faeee7;
  --headline: #33272a;
- --text: #000000;
- --button: #e30b5c;
- --otherbutton: #001858;
- --button-text: #33272a;
+ --text: #e30b5c;
  --stroke: #33272a;
  --main: #fffffe;
  --highlight: #ff8ba7;
  --secondary: #ffc6c7;
  --tertiary: #c3f0ca;
+ --background2: #e30b5c;
 
  /*other vars */
  --borderRadius: 0.25rem;
@@ -53,7 +51,7 @@ p {
  margin-bottom: 1rem;
  max-width: 40em;
  line-height: 1.75;
- font-size: 1.5rem;
+ font-size: 1.4rem;
  font-weight: 400;
 }
 
@@ -172,7 +170,7 @@ footer {
 }
 
 .hero {
- height: 400px;
+ height: 500px;
  position: relative;
  padding: 20px;
  box-sizing: border-box;
@@ -200,10 +198,9 @@ footer {
 
 .hero .title {
  font-size: 24px;
- color: black;
+ color: var(--headline);
  text-align: center;
  font-weight: 700;
- color: #181818;
  text-shadow: 0px 2px 2px #a6f8d5;
  position: relative;
  margin: 0 0 20px 0;
@@ -214,7 +211,7 @@ span {
  justify-content: center;
  align-items: center;
  font-weight: 600;
- color: var(--button);
+ color: var(--text);
  margin-top: 2rem;
  transition: all 300ms ease-in-out;
 }
@@ -240,7 +237,7 @@ span:hover {
 .card h3 {
  padding-bottom: 0.5em;
  margin: 0 0 0.142857143em;
- border-bottom: 2px solid var(--button);
+ border-bottom: 2px solid var(--text);
  transition: color 0.45s ease, border 0.45s ease;
 }
 
@@ -262,7 +259,7 @@ span:hover {
 }
 
 .card:hover {
- background: var(--button);
+ background: var(--text);
  transform: scale(1.02);
 }
 .card:hover span {
@@ -315,12 +312,14 @@ span:hover {
  width: 100%;
  display: flex;
  justify-content: center;
- align-items: center;
+ align-items: flex-start;
  margin-left: 2rem;
 }
 
 .more__img img {
  width: 60%;
+ border-radius: 15px 50px;
+ border: 10px solid var(--highlight);
 }
 
 .more-text {
