--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -33,7 +33,7 @@
 }
 
 .app__navbar-links li:hover {
- color: var(--button-text);
+ color: var(--headline);
 }
 
 .app__navbar-right {
@@ -61,7 +61,7 @@
 
 .app__navbar-smallscreen_overlay .overlay__close {
  font-size: 27px;
- color: var(--button);
+ color: var(--text);
  cursor: pointer;
 
  position: absolute;
@@ -76,7 +76,7 @@
 .app__navbar-smallscreen_links li {
  margin: 2rem;
  cursor: pointer;
- color: var(--button-text);
+ color: var(--headline);
  font-size: 2rem;
  text-align: center;
 }
@@ -89,19 +89,23 @@
  cursor: pointer;
  display: inline-block;
  background: none;
- border: 1px var(--button) solid;
- background: var(--button);
+ border: 1px var(--background2) solid;
+ background: var(--background2);
  color: var(--main);
  padding: 1rem;
  line-height: 1.2;
  text-align: center;
  text-decoration: none;
  font-weight: bold;
+ transition: all 300ms ease-in-out;
+}
+.btn:hover {
+ font-size: 1.2rem;
 }
 
 .btn-dark-outline {
- border-color: var(--button);
- color: var(--button);
+ border-color: var(--background2);
+ color: var(--text);
 }
 
 .btn-dark-outline:hover,
@@ -115,7 +119,7 @@
 }
 
 .btn-dark {
- background-color: var(--button);
+ background-color: var(--background2);
  color: #fff;
 }
 
