--- a/src/App.css
+++ b/src/App.css
@@ -423,8 +423,8 @@ span:hover {
  .hero .inner {
   position: absolute;
   height: 60%;
-  top: 30%;
-  width: 30%;
+  top: 20%;
+  width: 27%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -443,7 +443,6 @@ span:hover {
   font-weight: 700;
   text-shadow: 0px 2px 2px #a6f8d5;
   position: relative;
-  margin-bottom: -1rem;
  }
 
  .hero span {
@@ -455,8 +454,7 @@ span:hover {
   color: var(--background2);
   margin-top: 2rem;
   transition: var(--transition);
-  top: 80%;
-  margin: 1rem 0;
+  margin-top: -1rem;
  }
 
  span:hover {
