--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 :root {
  --background: #faeee7;
- --headline: #33272a;
+ --headline: #9e0d31;
  --text: #e30b5c;
  --main: #fffffe;
  --highlight: #ff8ba7;
  --secondary: #ffc6c7;
  --background2: #e30b5c;
+ --green: #004225;
 
  /*other vars */
  --transition: 0.3s ease-in-out all;
@@ -17,6 +18,8 @@
 *::before,
 *::after {
  box-sizing: border-box;
+ margin: 0;
+ padding: 0;
 }
 
 /* fonts */
@@ -102,7 +105,7 @@ span {
  align-items: center;
  font-weight: 600;
  color: var(--text);
- margin-top: 2rem;
+ margin-top: 1rem;
  transition: var(--transition);
 }
 
@@ -139,7 +142,6 @@ nav {
  grid-column: 1/2;
  grid-row: 3/4;
  margin: 4rem 2rem;
- margin-left: 4rem;
 }
 
 #card2 {
@@ -187,6 +189,8 @@ footer {
  overflow: hidden;
  background-image: url('../src/assets/happy.jpeg');
  background-size: 100% 100%;
+ min-width: 69%;
+ max-width: 20.75em;
 }
 
 .hero .inner {
@@ -230,15 +234,18 @@ span:hover {
 .card {
  display: flex;
  flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ min-width: 60%;
  max-width: 20.75em;
  overflow: hidden;
  border-radius: 0.5em;
  text-decoration: none;
  background: white;
  margin: 1em;
- padding: 2.75em 2.5em;
+ padding: 1rem 1rem;
  box-shadow: 0 1.5em 2.5em -0.5em rgba(#000000, 0.1);
- transition: transform 0.45s ease, background 0.45s ease;
+ transition: transform 0.45s ease;
 }
 
 .card h3 {
@@ -258,18 +265,28 @@ span:hover {
  color: #ffffff;
  font-weight: 400;
  line-height: 1.8;
- margin: 0 0 1.25em;
+ margin: 0 0 0.5em;
  transform: translateY(-1em);
  transition: opacity 0.45s ease, transform 0.5s ease;
  text-align: justify;
  font-size: 1.25em;
 }
 
+.card .link-text {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-weight: 600;
+ color: var(--text);
+ margin-top: 2rem;
+ cursor: pointer;
+}
+
 .card:hover {
  background: var(--text);
  transform: scale(1.02);
 }
-.card:hover span {
+.card:hover .link-text {
  color: #fff;
 }
 .card:hover h3 {
@@ -282,10 +299,6 @@ span:hover {
 .card:hover p {
  opacity: 1;
  transform: none;
-}
-
-.card span:hover {
- color: var(--main);
 }
 
 @keyframes point {
@@ -306,24 +319,24 @@ span:hover {
 }
 
 .more__img {
- flex: 1;
- width: 100%;
+ max-width: 50%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
- margin-left: 2rem;
 }
 
 .more__img img {
- width: 60%;
+ width: 90%;
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
  border-radius: 15px 50px;
  border: 10px solid var(--highlight);
 }
 
 .more-text {
  max-width: 500px;
- text-align: justify;
- justify-self: center;
+ text-align: left;
  padding: 20px 0;
  margin: 0 auto;
  line-height: 1.7rem;
@@ -371,7 +384,7 @@ span:hover {
   grid-column: 1/2;
   grid-row: 3/4;
   margin: 4rem 2rem;
-  margin-left: 4rem;
+  place-items: center;
  }
 
  #card2 {
@@ -379,12 +392,14 @@ span:hover {
   grid-column: 2/3;
   grid-row: 3/4;
   margin: 4rem 2rem;
+  place-items: center;
  }
  #card3 {
   grid-area: card3;
   grid-column: 3/4;
   grid-row: 3/4;
   margin: 4rem 2rem;
+  place-items: center;
  }
 
  #more1 {
@@ -418,11 +433,12 @@ span:hover {
   text-decoration: none;
   border: 4px solid #b0215e;
   background-size: cover;
+  min-width: 100%;
  }
 
  .hero .inner {
   position: absolute;
-  height: 60%;
+  height: 70%;
   top: 20%;
   width: 27%;
   display: flex;
@@ -454,7 +470,6 @@ span:hover {
   color: var(--background2);
   margin-top: 2rem;
   transition: var(--transition);
-  margin-top: -1rem;
  }
 
  span:hover {
@@ -483,8 +498,9 @@ span:hover {
  /* Navbar */
  .app__navbar-right {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: space-between;
+  align-items: left;
+  flex-direction: row;
  }
 
  .app__navbar-right a {
@@ -495,13 +511,13 @@ span:hover {
  }
 
  .app__navbar-right a:hover {
-  border-bottom: 1px solid var(--color-golden);
+  border-bottom: 1px solid var(--main);
  }
 
  .app__navbar-right div {
   width: 1px;
   height: 30px;
-  background: var(--color-grey);
+  background: var(--background2);
  }
 }
 
@@ -509,5 +525,23 @@ span:hover {
  .more {
   margin-right: auto;
   margin-left: auto;
+ }
+
+ .more__img img {
+  width: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px 50px;
+  border: 10px solid var(--highlight);
+ }
+
+ .more-text {
+  max-width: 500px;
+  text-align: justify;
+  justify-self: center;
+  padding: 20px 0;
+  margin: 0 auto;
+  line-height: 1.7rem;
  }
 }
