--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -90,18 +90,14 @@
  cursor: pointer;
  display: inline-block;
  background: none;
- border: 1px var(--background2) solid;
- background: var(--background2);
- color: var(--main);
- padding: 1rem;
+ border: 1px #000 solid;
+ padding: 7px 16px;
  line-height: 1.2;
  text-align: center;
  text-decoration: none;
- font-weight: bold;
- transition: all 300ms ease-in-out;
 }
-.btn:hover {
- font-size: 1.2rem;
+.btn:nth-child(1) {
+ margin-right: 1rem;
 }
 
 .btn-dark-outline {
@@ -125,7 +121,7 @@
 }
 
 .btn-dark:hover {
- background-color: var(--highlight);
+ background-color: var(--green);
 }
 
 .mobile-menu-bottom {
