--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 }
 
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap');
 
 /* Remove default margin */
 body,
@@ -41,7 +41,7 @@ dd {
 
 body {
  background: var(--background);
- font-family: 'Montserrat', sans-serif;
+ font-family: 'Nunito', sans-serif;
  line-height: 1.75;
  color: var(--text);
 }
@@ -49,7 +49,7 @@ body {
 p {
  margin-bottom: 1rem;
  max-width: 40em;
- line-height: 1.75;
+ line-height: 1.5;
  font-size: 1.4rem;
  font-weight: 400;
 }
@@ -69,7 +69,7 @@ h3 {
  color: var(--text);
  font-size: 2.5em;
  font-weight: 600;
- line-height: 1.5;
+ line-height: 1.2;
  padding-bottom: 0.5em;
  margin: 0 0 0.142857143em;
  transition: color 0.45s ease, border 0.45s ease;
@@ -189,21 +189,22 @@ footer {
  overflow: hidden;
  background-image: url('../src/assets/happy.jpeg');
  background-size: 100% 100%;
- min-width: 69%;
+ min-width: 72%;
  max-width: 20.75em;
 }
 
 .hero .inner {
  position: absolute;
- top: 60%;
+ top: 50%;
  width: 90%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
- padding: 1.5rem;
+ padding: 0.5rem;
  margin-bottom: 2rem;
- margin-left: 2rem;
+ margin-left: 1rem;
+ padding-bottom: 1.5rem;
 }
 
 .hero p {
@@ -212,19 +213,15 @@ footer {
  text-align: left;
  font-weight: bold;
  font-size: 1rem;
- position: absolute;
 }
 
 .hero span {
- position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 600;
  color: var(--main);
- margin-top: 2rem;
  transition: var(--transition);
- top: 80%;
 }
 
 span:hover {
@@ -457,18 +454,14 @@ span:hover {
   color: var(--headline);
   text-align: center;
   font-weight: 700;
-  text-shadow: 0px 2px 2px #a6f8d5;
-  position: relative;
  }
 
  .hero span {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 600;
   color: var(--background2);
-  margin-top: 2rem;
   transition: var(--transition);
  }
 
